[package]
name = "spawn-access-control"
version = "0.1.9"
edition = "2021"
description = "A WASM-based access-control token library for Web3 developers, providing a high-performance, secure, and customizable solution."
license = "MIT"
repository = "https://github.com/nzengi/spawn-access-control"
homepage = "https://github.com/nzengi/spawn-access-control"
documentation = "https://docs.rs/spawn-access-control"
readme = "README.md"
keywords = ["WASM", "access-control", "blockchain", "WebAssembly", "Rust"]
categories = ["cryptography", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
no-default-features = false
