[package]
name = "access-control"
version = "0.1.10"
edition = "2021"
description = "A rust-based access-control token library for Web3 developers, providing a high-performance, secure, and customizable solution."
license = "MIT"
repository = "https://github.com/nzengi/spawn-access-control"
homepage = "https://github.com/nzengi/access-control"
documentation = "https://docs.rs/access-control"
readme = "README.md"
keywords = ["WASM", "access-control", "blockchain", "WebAssembly", "Rust"]
categories = ["cryptography", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-pack = "0.10" # For building the WASM output
wasm-bindgen-futures = "0.4"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
no-default-features = false
