[package]
name = "spawn-access-control"
version = "0.1.10"
edition = "2021"
description = "A Rust library for access control management with WebAssembly support, including role-based access control (RBAC), permissions, and audit logging."
license = "MIT"
repository = "https://github.com/nzengi/spawn-access-control"
homepage = "https://github.com/nzengi/access-control"
documentation = "https://docs.rs/access-control"
readme = "README.md"
keywords = ["WASM", "access-control", "blockchain", "WebAssembly", "Rust"]
categories = ["cryptography", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mio = "1.0"  # Native platformlarda kullanılan kütüphane

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[build-dependencies]
wasm-bindgen-cli = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]  # WebAssembly desteği için cdylib ekleyin
